--- a/python.css
+++ b/python.css
@@ -1,4 +1,3 @@
-
 body
 {
     background-color: rgb(6, 3, 65);
@@ -7,7 +6,7 @@ body
     overflow-y: auto;
 }
 
-.Java_Heading_Container
+.Python_Heading_Container
 {
     display: flex;
     justify-content: center;
@@ -21,8 +20,7 @@ h2
     
 }
 
-
-.problem-title {
+.python_problem-title {
   
   border: 2px solid rgb(182, 193, 181);
   color: #fff;
@@ -33,8 +31,7 @@ h2
   display: flex;
 }
 
-
-.solution {
+.python_solution {
   display: none;  
   padding-left: 20px;
   color: #ddd;
@@ -43,7 +40,6 @@ h2
   border: 2px solid rgb(18, 207, 50);
   background-color: rgb(16, 16, 66);
 }
-
 
 ul
 {
@@ -58,12 +54,9 @@ ul li
     
 }
 
-
-ul a
+p 
 {
-    color: rgb(239, 239, 238);
-    text-decoration: none;
-    cursor:all-scroll;
-    
+   white-space: pre-line;
 }
+
 
